config and default.html fix

--- a/404.md
+++ b/404.md
@@ -3,6 +3,7 @@ title: 404 - Not Found
 layout: default
 permalink: /404.html
 redirect_from:
+  - /img/
   - /assets/
   - /redhat/
   - /redhat/idp
