nicer dir listing

--- a/404.md
+++ b/404.md
@@ -2,6 +2,16 @@
 title: 404 - Not Found
 layout: default
 permalink: /404.html
+redirect_from:
+  - /img/
+  - /assets/
+  - /redhat/
+  - /redhat/idp/
+  - /redhat/idp/cert+ldap/img/
+  - /redhat/idp/cert+ldap/ldap/
+  - /redhat/idp/cert+ldap/cert/
+  - /cicd/
+  - /cicd/argo/
 ---
 # 404
 <h3>Page not found! :thinking:</h3>
