cleaning and DRY work

--- a/404.md
+++ b/404.md
@@ -1,6 +1,5 @@
 ---
-title: 404 - Not Found
-layout: default
+description: 'page not found'
 permalink: /404.html
 redirect_from:
   - /img/
@@ -13,5 +12,4 @@ redirect_from:
   - /cicd/
   - /cicd/argo/
 ---
-# 404
-<h3>Page not found! :thinking:</h3>
+# 404 :thinking:
